--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,8 @@
 *.pyc
 __pycache__
 db.sqlite3
-<<<<<<< HEAD
 # media
-=======
 
->>>>>>> d81b384164b6a2f7111d1eef4c585bd0daeba179
 
 # Backup files # 
 *.bak 
@@ -139,4 +136,6 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+Telegram Bots/
 
